--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
     			<a href="https://hwaphon.github.io/WebProject/CanvasClip/canvasclip.html">Canvas 滤镜</a>
     		</li>
 
-<<<<<<< HEAD
-    		<li><a href="https://hwaphon.github.io/HTML5MusicPlayer">HTML5音乐播放器</a></li>
-=======
-            <li><a href="https://hwaphon.github.io/HTML5MusicPlayer">HTML5音乐播放器</a></li>
->>>>>>> f71f348cc0384dfac9a12c5dc8d1ee3bb0e87996
+    		<li>
+                <a href="https://hwaphon.github.io/HTML5MusicPlayer">HTML5音乐播放器</a>
+            </li>
     	</ul>
     </body>
 </html>
