--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <li>
                 <a href="https://hwaphon.github.io/Html5LocalStorage">HTML5便签小应用</a>
             </li>
+            
+            <li>
+                <a href="https://hwaphon.github.io/Html5Canvas/">Canvas绘制图案</a>
+            </li>                      
     	</ul>
     </body>
 </html>
