--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
             
             <li>
                 <a href="https://hwaphon.github.io/Html5Canvas/">Canvas绘制图案</a>
-            </li>                      
+            </li>   
+            
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/rotate.html">3D旋转演示</a>
+            </li>
     	</ul>
     </body>
 </html>
