--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/rotate.html">3D旋转演示</a>
             </li>
+            
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/3dPaging/index.html">3D翻页效果</a>
+            </li>
     	</ul>
     </body>
 </html>
