--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         	li {
         		height: 48px;
         		line-height: 48px;
-        		background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+        		background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
         		border-radius: 8px;
         		cursor: pointer;
         		padding: 0 12px;
