--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/TransitionDemo/index.html">Hover 动画效果</a>
             </li>
+            
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/TransitionDemo/photo.html">照片折叠效果</a>
+            </li>
     	</ul>
     </body>
 </html>
