--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
         	li {
         		height: 48px;
         		line-height: 48px;
-        		background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+                font-size: 18px;
+                background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
         		border-radius: 8px;
         		cursor: pointer;
         		padding: 0 12px;
         		margin-bottom: 8px;
+                position: relative;
         	}
+
+            li::after {
+                content: "";
+                width: 18px;
+                height: 18px;
+                background-image: url("smile.png");
+                position: absolute;
+                top: 50%;
+                right: 18px;
+                transform: translateY(-50%);
+            }
 
         	li a {
         		text-decoration: none;
