--- a/index.html
+++ b/index.html
@@ -57,9 +57,22 @@
         	li a:hover {
         		border-bottom: 2px solid #fff;
         	}
+
+            .bg {
+                position: fixed;
+                width: 128px;
+                height: 128px;
+            }
+
+            #right-bg {
+                background-image: url("aside.png");
+                right: 48px;
+                bottom: 48px;
+            }
         </style>
     </head>
     <body>
+        <div id="right-bg" class="bg"></div>
     	<ul>
     		<li>
     			<a href="https://hwaphon.github.io/WebProject/CanvasClip/canvasclip.html">Canvas 滤镜</a>
