--- a/index.html
+++ b/index.html
@@ -52,11 +52,24 @@
         		color: #fff;
         		cursor: pointer;
         		padding-bottom: 4px;
+                position: relative;
         	}
 
-        	li a:hover {
-        		border-bottom: 2px solid #fff;
-        	}
+            li a::after {
+                content: "";
+                height: 2px;
+                background-color: rgba(255,255,255,0);
+                width: 100%;
+                position: absolute;
+                bottom: -2px;
+                left: 100%;
+                transition: all 0.2s ease-out;
+            }
+
+            li a:hover::after {
+                background-color: rgba(255,255,255,1);
+                left: 0;
+            }
 
             .bg {
                 position: fixed;
