--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         		cursor: pointer;
         		padding-bottom: 4px;
                 position: relative;
+                outline: none;
         	}
 
             li a::after {
