--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/TransitionDemo/photo.html">照片折叠效果</a>
             </li>
+            
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/PhotoShadow/index.html">照片折叠效果</a>
+            </li>
     	</ul>
     </body>
 </html>
