--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </li>
             
             <li>
-                <a href="https://hwaphon.github.io/WebProject/PhotoShadow/index.html">照片折叠效果</a>
+                <a href="https://hwaphon.github.io/WebProject/PhotoShadow/index.html">曲线阴影和翘边阴影</a>
             </li>
     	</ul>
     </body>
