--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <style type="text/css">
-        	* {
+        	*, *::before, *::after {
         		margin: 0;
         		padding: 0;
         		box-sizing: border-box;
@@ -22,6 +22,7 @@
         		margin: 24px auto;
         		list-style: none;
         		width: 480px;
+                position: relative;
         	}
 
         	li {
@@ -31,7 +32,7 @@
                 background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
         		border-radius: 8px;
         		cursor: pointer;
-        		padding: 0 12px;
+        		padding: 0 18px;
         		margin-bottom: 8px;
                 position: relative;
         	}
@@ -55,6 +56,20 @@
                 position: relative;
                 outline: none;
         	}
+
+            li::before {
+                content: "";
+                width: 24px;
+                height: 24px;
+                border: 8px solid #4facfe;
+                border-radius: 50%;
+                position: absolute;
+                right: 100%;
+                top: 50%;
+                transform: translateY(-50%);
+                background-color: transparent;
+                box-shadow: 0px 0px 2px rgba(0,0,0,.6) inset;
+            }
 
             li a::after {
                 content: "";
