图片折叠效果

--- a/TransitionDemo/photo.html
+++ b/TransitionDemo/photo.html
@@ -15,7 +15,7 @@
         	}
 
         	body {
-        		background-color: #ccc;
+                background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         	}
 
         	#container {
