--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             }
         </style>
 
-        <script type="text/javascript" src="http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js"></script>
+        <script type="text/javascript" src="https://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js"></script>
         <script type="text/javascript">
            $youziku.load("span", "8eddb68cffcc4f4d998c722085737caa", "JQjianxingkai");
            $youziku.draw();
