--- a/index.html
+++ b/index.html
@@ -103,8 +103,12 @@
 
         <script type="text/javascript" src="https://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js"></script>
         <script type="text/javascript">
+        <script type="text/javascript">
            $youziku.load("span", "8eddb68cffcc4f4d998c722085737caa", "JQjianxingkai");
+           $youziku.load("#id1,.class1,span", "8eddb68cffcc4f4d998c722085737caa", "JQjianxingkai");
+           /*．．．*/
            $youziku.draw();
+        </script>
         </script>
     </head>
     <body>
