--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/PhotoShaow/index.html">曲线阴影和翘边阴影</a>
             </li>
+
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/TransitionDemo/cubic-animation.html">曲线阴影和翘边阴影</a>
+            </li>
     	</ul>
     </body>
 </html>
