--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </li>
 
             <li>
-                <a href="https://hwaphon.github.io/WebProject/TransitionDemo/cubic-animation.html">曲线阴影和翘边阴影</a>
+                <a href="https://hwaphon.github.io/WebProject/TransitionDemo/cubic-animation.html">贝塞尔曲线实现弹性效果</a>
             </li>
     	</ul>
     </body>
