--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/TransitionDemo/cubic-animation.html">贝塞尔曲线实现弹性效果</a>
             </li>
+
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/3d-ball.html"></a>
+            </li>
     	</ul>
     </body>
 </html>
