--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </li>
 
             <li>
-                <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/3d-ball.html"></a>
+                <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/3d-ball.html">3D球形旋转</a>
             </li>
     	</ul>
     </body>
