--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/3d-ball.html">3D球形旋转</a>
             </li>
+
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/3dRotateDemo/3d-cubic.html">3D立方体旋转</a>
+            </li>
+
     	</ul>
     </body>
 </html>
