--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             <li>
                 <a href="https://hwaphon.github.io/Html5LocalStorage">HTML5 便签小应用</a>
             </li>
+
+            <li>
+                <a href="https://hwaphon.github.io/Html5LocalStorage/2.0/index.html">HTML5 便签小应用升级版</a>
+            </li>
             
             <li>
                 <a href="https://hwaphon.github.io/Html5Canvas/">Canvas 绘制图案</a>
