--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -21,6 +21,7 @@
 				height: 320px;
 				background-color: #fff;
 				border-radius: 8px;
+				box-shadow: 1px 1px 5px 0px rgba(0,0,0,.2);
 			}
 			.title {
 				position: relative;
