--- a/index.html
+++ b/index.html
@@ -2,105 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale = 1.0">
         <link href="https://fonts.googleapis.com/css?family=Timmana" rel="stylesheet">
-        <style type="text/css">
-        	*, *::before, *::after {
-        		margin: 0;
-        		padding: 0;
-        		box-sizing: border-box;
-        	}
-
-        	html, body {
-        		height: 100%;
-        	}
-
-        	body {
-        		background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-        	}
-
-        	ul {
-        		margin: 24px auto;
-        		list-style: none;
-        		width: 480px;
-                position: relative;
-        	}
-
-        	li {
-        		height: 48px;
-        		line-height: 48px;
-                font-size: 18px;
-                background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-        		border-radius: 8px;
-        		cursor: pointer;
-        		padding: 0 18px;
-        		margin-bottom: 8px;
-                position: relative;
-        	}
-
-            li::after {
-                content: "";
-                width: 18px;
-                height: 18px;
-                background-image: url("smile.png");
-                position: absolute;
-                top: 50%;
-                right: 18px;
-                transform: translateY(-50%);
-            }
-
-        	li a {
-        		text-decoration: none;
-        		color: #fff;
-        		cursor: pointer;
-        		padding-bottom: 4px;
-                position: relative;
-                outline: none;
-                font-family: 'Timmana', sans-serif;
-        	}
-
-            li::before {
-                content: "";
-                width: 24px;
-                height: 24px;
-                border: 8px solid #4facfe;
-                border-radius: 50%;
-                position: absolute;
-                right: 100%;
-                top: 50%;
-                transform: translateY(-50%);
-                background-color: transparent;
-                box-shadow: 0px 0px 2px rgba(0,0,0,.6) inset;
-            }
-
-            li a::after {
-                content: "";
-                height: 2px;
-                background-color: rgba(255,255,255,0);
-                width: 100%;
-                position: absolute;
-                bottom: 6px;
-                left: 100%;
-                transition: all 0.2s ease-out;
-            }
-
-            li a:hover::after {
-                background-color: rgba(255,255,255,1);
-                left: 0;
-            }
-
-            .bg {
-                position: fixed;
-                width: 128px;
-                height: 128px;
-            }
-
-            #right-bg {
-                background-image: url("aside.png");
-                right: 48px;
-                bottom: 48px;
-            }
-        </style>
-
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div id="right-bg" class="bg"></div>
