add browse happy

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                 <a href="https://hwaphon.github.io/WebProject/Calendar/index.html">自定义日历控件</a>
             </li>
 
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/browseHappy/index.html">Browse Happy</a>
+            </li>
+
     	</ul>
     </body>
 </html>
