--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                 <a href="https://hwaphon.github.io/WebProject/browseHappy/index.html">Browse Happy</a>
             </li>
 
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/pintu/index.html">拼图游戏</a>
+            </li>
+
     	</ul>
     </body>
 </html>
