--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 <a href="https://hwaphon.github.io/WebProject/pintu/index.html">拼图游戏</a>
             </li>
 
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/VerticalTimeline/index.html">垂直时间轴</a>
+            </li>
+
     	</ul>
     </body>
 </html>
