--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/VerticalTimeline/index.html">垂直时间轴</a>
             </li>
-
+            
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/HorizontalTimeline/index.html">水平时间轴</a>
+            </li>
     	</ul>
     </body>
 </html>
