--- a/VerticalTimeline/index.html
+++ b/VerticalTimeline/index.html
@@ -4,6 +4,7 @@
   
   <!--  Meta  -->
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <title>My New Pen!</title>
   <link rel="stylesheet" href="styles/index.css">
 </head>
