--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/HorizontalTimeline/index.html">水平时间轴</a>
             </li>
+
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/NotesApp/index.html">Vue Notes App</a>
+            </li>
     	</ul>
     </body>
 </html>
