--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/NotesApp/index.html">Vue Notes App</a>
             </li>
+
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/GithubSearchEngine/index.html">Vue Github Search Engine</a>
+            </li>
     	</ul>
     </body>
 </html>
