--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/GithubSearchEngine/index.html">Vue Github Search Engine</a>
             </li>
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/Secret/index.html">Secret</a>
+            </li>
     	</ul>
     </body>
 </html>
