--- a/Secret/index.html
+++ b/Secret/index.html
@@ -7,4 +7,4 @@
         height: 100%;
         background-color: #f9fafc;
       }</style><script type=text/javascript src=http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js></script><script>$youziku.load("#dheader-logo-font", "bfb5d3bf4d9045bfb32a2cc9fcb4e2cc", "cyjianxk");
-      $youziku.draw();</script><link href=/static/css/app.b402d5e57c374308a4a016c6779cedee.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.1d236bed574801481da3.js></script><script type=text/javascript src=/static/js/app.efd2fc9e495eec80d1e1.js></script></body></html>
+      $youziku.draw();</script><link href=./static/css/app.fb5d4fea5225fab1c974d3e24363cf75.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.aa22bfc3e42588f0b684.js></script><script type=text/javascript src=./static/js/app.25ef1e34b0f5280339ba.js></script></body></html>
