--- a/Secret/index.html
+++ b/Secret/index.html
@@ -6,5 +6,4 @@
       html, body {
         height: 100%;
         background-color: #f9fafc;
-      }</style><script type=text/javascript src=http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js></script><script>$youziku.load("#dheader-logo-font", "bfb5d3bf4d9045bfb32a2cc9fcb4e2cc", "cyjianxk");
-      $youziku.draw();</script><link href=./static/css/app.df14e8b862207a647d360c3b7645c4a4.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.93bcb4b69c9f20ca4e00.js></script><script type=text/javascript src=./static/js/app.98811424e3ac8d29f3ec.js></script></body></html>
+      }</style><link href=./static/css/app.1fe1cd4ff6e56036aea028b53a680bcc.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.2944f0641fb11af720da.js></script><script type=text/javascript src=./static/js/app.c756aacec4881bb9c62a.js></script></body></html>
