--- a/Secret/index.html
+++ b/Secret/index.html
@@ -6,5 +6,4 @@
       html, body {
         height: 100%;
         background-color: #f9fafc;
-      }</style><script type=text/javascript src=http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js></script><script>$youziku.load("#dheader-logo-font", "bfb5d3bf4d9045bfb32a2cc9fcb4e2cc", "cyjianxk");
-      $youziku.draw();</script><link href=/static/css/app.b402d5e57c374308a4a016c6779cedee.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.1d236bed574801481da3.js></script><script type=text/javascript src=/static/js/app.efd2fc9e495eec80d1e1.js></script></body></html>
+      }</style><link href=./static/css/app.c892f1dc6f17a41b9630cd367d65e54d.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.2ffc17078ac23cef811d.js></script><script type=text/javascript src=./static/js/app.f945e8257ecf09fcc715.js></script></body></html>
