--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <li>
                 <a href="https://hwaphon.github.io/WebProject/Secret/index.html">Secret</a>
             </li>
+            <li>
+                <a href="https://github.com/hwaphon/WXWeather">简悦天气小程序</a>
+            </li>
     	</ul>
     </body>
 </html>
