--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             <li>
                 <a href="https://github.com/hwaphon/WXWeather">简悦天气小程序</a>
             </li>
+            <li>
+                <a href="https://github.com/hwaphon/mpZAKER">mpvue开发的ZAKER小程序</a>
+            </li>
     	</ul>
     </body>
 </html>
