--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             <li>
                 <a href="https://github.com/hwaphon/mpZAKER">mpvue开发的ZAKER小程序</a>
             </li>
+            <li>
+                <a href="https://hwaphon.github.io/WebProject/CSSSecrets/index.html">CSS揭秘书中例子的在线展示</a>
+            </li>
     	</ul>
     </body>
 </html>
